...
          testID="e2e-hook-back"
          onPress={onBack}
          style={styles.backBtn}
        >
          <Text style={styles.backTxt}>{'< Back'}</Text>
        </TouchableOpacity>
        <Text style={styles.title}>NitroSound with Hook</Text>
        <View style={styles.spacer} />
      </View>
      <ScrollView contentContainerStyle={styles.container}>
        <Text style={styles.sectionTitle}>Recorder</Text>
        <View style={styles.row}>
          <TouchableOpacity
            testID="e2e-hook-record-start"
            style={[
              styles.btn,
              (isRecordLoading || isRecording) && styles.btnDisabled,
            ]}
            onPress={onStartRecord}
            disabled={isRecordLoading || isRecording}
...
              </View>
            ) : (
              <Text style={styles.btnTxt}>Start</Text>
            )}
          </TouchableOpacity>
          <TouchableOpacity
            testID="e2e-hook-record-pause"
            style={[
              styles.btn,
              (isRecordLoading || !isRecording) && styles.btnDisabled,
            ]}
            onPress={pauseRecorder}
            disabled={isRecordLoading || !isRecording}
          >
            <Text style={styles.btnTxt}>Pause</Text>
          </TouchableOpacity>
          <TouchableOpacity
            testID="e2e-hook-record-resume"
            style={[
              styles.btn,
              (isRecordLoading || !isRecording) && styles.btnDisabled,
            ]}
            onPress={resumeRecorder}
            disabled={isRecordLoading || !isRecording}
          >
            <Text style={styles.btnTxt}>Resume</Text>
          </TouchableOpacity>
          <TouchableOpacity
            testID="e2e-hook-record-stop"
            style={[
              styles.btn,
              (!isRecording || isStopLoading) && styles.btnDisabled,
            ]}
            onPress={onStopRecordPress}
            disabled={!isRecording || isStopLoading}
...
              ]}
            />
          </View>
        )}
        <View style={styles.row}>
          <TouchableOpacity
            testID="e2e-hook-player-start"
            style={[
              styles.btn,
              (isPlayLoading || isPlaying) && styles.btnDisabled,
            ]}
            onPress={onStartPlay}
            disabled={isPlayLoading || isPlaying}
...
              </View>
            ) : (
              <Text style={styles.btnTxt}>Play</Text>
            )}
          </TouchableOpacity>
          <TouchableOpacity
            testID="e2e-hook-player-pause"
            style={[
              styles.btn,
              (isPlayLoading || !isPlaying) && styles.btnDisabled,
            ]}
            onPress={async () => {
              try {
...
            }}
            disabled={isPlayLoading || !isPlaying}
          >
            <Text style={styles.btnTxt}>Pause</Text>
          </TouchableOpacity>
          <TouchableOpacity
            testID="e2e-hook-player-resume"
            style={[
              styles.btn,
              (isPlayLoading || isPlaying) && styles.btnDisabled,
            ]}
            onPress={async () => {
              try {
...
            }}
            disabled={isPlayLoading || isPlaying}
          >
            <Text style={styles.btnTxt}>Resume</Text>
          </TouchableOpacity>
          <TouchableOpacity
            testID="e2e-hook-player-stop"
            style={[
              styles.btn,
              (isPlayLoading || (!isPlaying && playbackPosition === 0)) &&
                styles.btnDisabled,
            ]}
            onPress={async () => {
...
